Conclusao do prototipo para a primeira entrega

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "quasar-template",
+  "name": "tccengsw",
   "version": "0.0.1",
-  "description": "A Quasar Template",
-  "productName": "Quasar Template",
+  "description": "TCC ENG SW. NO PLASTIC",
+  "productName": "TCC ENG SW.",
   "author": "",
   "private": true,
   "scripts": {
